Wed May  7 21:45:00 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL::SSLServer#accept):
	  Consider Socket#accept as well as TCPServer#accept.
	  Reported by Sam Stelfox.  [ruby-core:62064] [Bug #9750]

Wed May  7 17:24:07 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_step_scan_args): check keyword arguments and fail
	  if they conflict with positional arguments.
	  [ruby-dev:48177] [Bug #9811]

Wed May  7 12:06:14 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: remove debug output and output results into
	  specified file.

Wed May  7 11:55:40 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: add '--rawdata-output=[FILE] option to output
	  raw results into FILE.

Wed May  7 11:25:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_local_variables): exclude variables hidden by
	  shadowing.  [ruby-core:60501] [Bug #9486]

	* vm.c (collect_local_variables_in_iseq): ditto.

Tue May  6 23:29:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_bv_gen): no duplicated names, if already added in
	  shadowing_lvar().

	* parse.y (local_tbl_gen): remove local variables duplicated with
	  arguments.
	  [ruby-core:60501] [Bug #9486]

Tue May  6 18:48:50 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Adjust the time zone of "now".

Tue May  6 18:33:12 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* io.c (io_{read,write}_nonblock): use rb_get_kwargs instead of
	  rb_hash_aref.

Tue May  6 18:03:05 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Argument validation code moved from
	  Time.parse and Time.strptime.

Tue May  6 17:27:06 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): [DOC] Fix an example in the documentation
	  to use EST.
	  Reported by Marcus Stollsteimer.
	  [ruby-core:60778] [Bug #9521] and [ruby-core:61718] [Bug #9682]

Tue May  6 04:31:48 2014  Tadayoshi Funaba  <tadf@dotrb.org>
